hphp/test/zend/bad/ext-intl/bug60192-compare.php
<?php
class Collator2 extends Collator{
	public function __construct() {
		// ommitting parent::__construct($someLocale);
	}
}

$c = new Collator2();
$a = $c->compare('h', 'H');